--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<div class="title">About ME</div>
 					<div class="container">
 						<p class="style1">So in case you dont know me yet ...</p>
-						<img src="images\profile linkedin for website.png" alt="About Me Image">
+						<img src="images\profile linkedin.png" alt="About Me Image">
 
 						<p class="style10">
 							Hi... I am Akram <br class="mobile-hider" />
