--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 						<img src="images/profile linkedin.png" alt="AboutMe Image">
 
 						<p class="style10">
-							Hi... I am Akram <br class="mobile-hider" />
-							I'm a full-stack web developer.
+							Hi... I am<br class="mobile-hider"/> Akram<br class="mobile-hider"/> 
+							I'm a <br class="mobile-hider"/>full-stack <br class="mobile-hider"/>web developer.
 						</p>
 						<p>I am a dedicated Computer and Software Engineering student at
 							Ain Shams University, actively applying my knowledge as a
