--- a/clininc port.html
+++ b/clininc port.html
@@ -47,7 +47,7 @@
 										<p>Tempus feugiat veroeros sed nullam dolore</p>
 									</header>
 									<a href="#" class="image featured">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/login menu medicalproject.png" alt="" />
 									</a>
 									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
 									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
@@ -62,7 +62,7 @@
 										<p>Tempus feugiat veroeros sed nullam dolore</p>
 									</header>
 									<a href="#" class="image featured">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/home medical project .png" alt="" />
 									</a>
 									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
 									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
@@ -77,7 +77,7 @@
 										<p>Tempus feugiat veroeros sed nullam dolore</p>
 									</header>
 									<a href="#" class="image featured">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/donation medicalproject.png" alt="" />
 									</a>
 									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
 									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
@@ -92,7 +92,22 @@
 										<p>Tempus feugiat veroeros sed nullam dolore</p>
 									</header>
 									<a href="#" class="image featured">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/dashboard medicalproject.png" alt="" />
+									</a>
+									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
+									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
+									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
+									tempus euismod. Vestibulum ante ipsum primis in faucibus.</p>
+									
+								</article>
+								<article class="box post">
+									<header class="style1">
+										<h2>Lorem ipsum dolor sit amet magna egestas<br class="mobile-hide" />
+										morbi bibendum sed malesuada</h2>
+										<p>Tempus feugiat veroeros sed nullam dolore</p>
+									</header>
+									<a href="#" class="image featured">
+										<img src="images/appointments medical project.png" alt="" />
 									</a>
 									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
 									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
